# GraphLM

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: loop.md  pr-feedback.md
.claude/rules/: 01-architecture.md  04-error-handling.md  05-testing.md  06-code-style.md  07-workflow.md  README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci-quality.yml
docs/: notion-sync.md
docs/ci/: conventions.md  status-checks.md
docs/ko/: README.md
docs/papers/: README.md  _template.md
notebooks/: README.md
notebooks/00-exploration/: 00-environment-check.ipynb
notebooks/01-experiments/: 00-phase1-growing-decoder.ipynb  01-phase1-reproducibility.ipynb  02-phase1-trigger-tuning.ipynb  03-phase1-alpha-distribution.ipynb  11-phase1-reproducibility.ipynb
notebooks/02-function-level/: 00-phase1-head-plasticity.ipynb  01-phase2-alpha-init-sweep.ipynb  02-phase3-seed-robustness.ipynb  03-phase4-per-channel-alpha.ipynb  04-phase5-task-scale.ipynb  05-phase6-positional-alpha.ipynb  06-phase7-amplitude-smooth-start.ipynb  07-phase8-growable-foundations.ipynb  08-phase9-group-graph-foundations.ipynb  09-phase10-channel-graph-foundations.ipynb  10-phase11-scale-corrected-init.ipynb  11-phase12-hybrid-graph-foundations.ipynb  12-phase13-hybrid-transformer.ipynb  13-phase14-graph-attention.ipynb  14-phase15-sparsity-prune.ipynb  14-phase4-per-channel-alpha.ipynb  15-phase16a-rigl-set-regrow.ipynb  16-phase16b-net2net-grow.ipynb  16-phase6-positional-alpha.ipynb  17-phase17-scale-up.ipynb  18-phase18-large-long.ipynb
notebooks/10-experiments/: 10-phase1-growing-decoder.ipynb  11-phase1-reproducibility.ipynb  12-phase1-trigger-tuning.ipynb  13-phase1-alpha-distribution.ipynb
notebooks/11-function-level/: 11-phase1-head-plasticity.ipynb  12-phase2-alpha-init-sweep.ipynb  13-phase3-seed-robustness.ipynb  15-phase5-task-scale.ipynb  16-phase6-positional-alpha.ipynb  17-phase7-amplitude-smooth-start.ipynb  18-phase8-growable-foundations.ipynb
scripts/: check-papers-frontmatter.py  gh-meta.sh  lint.sh  notion_papers_sync.py  notion_pr_sync.py  pr-feedback.sh  train_tinyshakespeare.py
src/graphlm/: __init__.py
tests/: conftest.py  test_smoke.py
tests/data/: test_tinyshakespeare.py
tests/growth/: test_net2deeper.py
tests/models/: test_backbone.py
tests/neuron/: test_backbone.py  test_graph_attention.py  test_graph_channel.py  test_graph_group.py  test_graph_hybrid.py  test_growable.py  test_growth.py  test_hybrid_transformer.py  test_rms_norm.py  (+1 more)
(+84 files in other folders)
