[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphlm"
version = "0.0.1"
description = "Graph 구조와 언어 모델을 결합한 연구·실험 프로젝트"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "juhy0987", email = "juhy0987@gmail.com" }]

# 코어 런타임 의존성 — Phase 1 prototype (#23) 부터 torch 도입
dependencies = [
    "numpy>=1.26",
    "torch>=2.0",
]

[project.optional-dependencies]
# 개발 / CI 도구
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbqa>=1.8",
    "nbstripout>=0.7",
]
# 노트북
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/juhy0987/GraphLM"

[tool.setuptools.packages.find]
where = ["src"]
include = ["graphlm*"]

[tool.setuptools.package-dir]
"" = "src"

# ── ruff ───────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "data",
    "runs",
    "checkpoints",
    "*.ipynb_checkpoints",
]

[tool.ruff.lint]
# 선택적이고 자주 도움 되는 규칙만 활성화 (연구 코드는 너무 엄격하면 마찰 증가)
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]
ignore = [
    "E501",  # line too long — ruff format 이 처리
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False 허용
"notebooks/**" = ["E402", "F401"]  # notebook 셀에서는 상위 임포트 / 미사용 허용

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── pytest ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: 1초 이상 걸리는 테스트",
    "gpu: CUDA 필요",
    "network: 외부 네트워크 의존",
]

# ── coverage ────────────────────────────────────────────
[tool.coverage.run]
source = ["src/graphlm"]
omit = [
    "*/tests/*",
    # demo modules — 노트북 orchestration 전용, unit-test 대상 아님 (Phase 8 ~ 12)
    "*/neuron/*_demo.py",
    "*/neuron/positional_analysis.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
